python-smisk (1.1.0-6) stable testing unstable; urgency=low

  * Fixed a bug in smisk.util.main where config arg was not delegated.

 -- Rasmus Andersson <rasmus@flajm.com>  Thu,  4 Dec 2008 04:40:51 +0100

python-smisk (1.1.0-5) stable testing unstable; urgency=low

  * Mostly smisk.mvc updates

 -- Rasmus Andersson <rasmus@flajm.com>  Thu,  4 Dec 2008 04:27:51 +0100

python-smisk (1.1.0-4) stable testing unstable; urgency=low

  * Fixed a bug in query string parsing where values where decoded twice,
    leaving "foo%2Bbar" as "foo bar" instead of "foo+bar".
  * Fixed DoS vulnerability in form post reader.

 -- Rasmus Andersson <rasmus@flajm.com>  Sun,  9 Nov 2008 23:10:51 +0100

python-smisk (1.1.0-3) testing stable; urgency=low

  * Reworked serialization and TCN logic
  * Upstream release 1.1a

 -- Rasmus Andersson <rasmus@flajm.com>  Thu, 30 Sep 2008 00:52:00 +0200

python-smisk (1.1.0-2) unstable; urgency=low

  * Fixed a bug where an empty error repsponse did not include custom headers.
  * Improved on content negotiation.
  * Rejecting clients requesting unacceptable types.

 -- Rasmus Andersson <rasmus@flajm.com>  Wed, 24 Sep 2008 00:35:00 +0200

python-smisk (1.1.0-1) unstable; urgency=low

  * MVC introduced
  * WSGI support

 -- Rasmus Andersson <rasmus@flajm.com>  Wed, 17 Sep 2008 18:26:33 +0200

python-smisk (1.0.0-1) unstable; urgency=low

  * First stable release

 -- Rasmus Andersson <rasmus@flajm.com>  Sat, 10 May 2008 02:15:51 +0200